[package]
name = "rust-curler-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.4.0"
aws-sdk-cloudwatch = "1.28.0"
reqwest = { version = "0.12.4", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
